--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
                     <resultDirectory>allure-results</resultDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>18</source>
+                    <target>18</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
